fix(node): Fix UnsupportedOperationException when suggesting cluster nodes